--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         android:layout_below="@+id/btnCaptureImage"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:maxHeight="150dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
@@ -48,7 +49,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Button" />
+        android:text="Post" />
 
     <Button
         android:id="@+id/btnLogout"
