--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -33,11 +33,13 @@
     <ImageView
         android:id="@+id/ivPostImage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_below="@+id/btnCaptureImage"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:maxHeight="150dp"
+        android:layout_marginTop="10dp"
+        android:adjustViewBounds="true"
+        android:cropToPadding="false"
+        android:scaleType="fitXY"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
